--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,9 @@
     "@types/react-dom": "^19.1.9",
     "axios": "^1.12.2",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
