--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,9 @@ services:
     ports:
       - 8080:8080
     environment:
-      MONGO_URI: mongodb://${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@localhost:27017/
+      MONGO_ROOT_USERNAME: $MONGO_ROOT_USERNAME
+      MONGO_ROOT_PASSWORD: $MONGO_ROOT_PASSWORD
+      MONGO_SOURCE: $MONGO_SOURCE
     depends_on:
       - db
   db:
@@ -27,13 +29,15 @@ services:
     image: mongo:7.0.24
     restart: 'always'
     volumes:
-      - ./db/mongo_data:/data/db 
+      - ./db/mongo_data:/data/db
+      - ./db/load-sh/scripts:/docker-entrypoint-initdb.d
+      - ./db/load-sh/data:/mongo-seed-jsons
     ports:
       - 27017:27017
     environment:
-      MONGO_INITDB_ROOT_USERNAME: $MONGO_ROOT_USERNAME
-      MONGO_INITDB_ROOT_PASSWORD: $MONGO_ROOT_PASSWORD
-      MONGO_INITDB_DATABASE: $APP_NAME
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD}
+      MONGO_INITDB_DATABASE: ${APP_NAME}
   db-client:
     container_name: 'mongo-express'
     image: mongo-express:1.0.2
@@ -41,10 +45,10 @@ services:
     ports:
       - 8081:8081
     environment:
-      ME_CONFIG_BASICAUTH_USERNAME: $MONGO_EXPRESS_USERNAME
-      ME_CONFIG_BASICAUTH_PASSWORD: $MONGO_EXPRESS_PASSWORD
-      ME_CONFIG_MONGODB_ADMINUSERNAME: $MONGO_ROOT_USERNAME
-      ME_CONFIG_MONGODB_ADMINPASSWORD: $MONGO_ROOT_PASSWORD
+      ME_CONFIG_BASICAUTH_USERNAME: ${MONGO_EXPRESS_USERNAME}
+      ME_CONFIG_BASICAUTH_PASSWORD: ${MONGO_EXPRESS_PASSWORD}
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_ROOT_USERNAME}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_ROOT_PASSWORD}
       ME_CONFIG_MONGODB_URL: mongodb://${MONGO_ROOT_USERNAME}:${MONGO_ROOT_PASSWORD}@mongo:27017/
     depends_on:
       - db
